--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 anyhow = "1.0.79"
+blas-src = "0.10.0"
 hashbrown = "0.14.3"
 nohash-hasher = "0.2.0"
 pyo3 = "0.18.1"
