--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Install OpenBLAS
         run: |
           sudo apt-get update
-          sudo apt-get install -y libopenblas-dev
+          sudo apt install build-essential
+          sudo apt-get install libblas-dev liblapack-dev
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
