--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,6 +34,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Set CARGO_BLAS
+        run: export CARGO_BLAS=openblas
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -41,9 +43,6 @@ jobs:
           args: --release --out dist --find-interpreter
           sccache: 'true'
           manylinux: auto
-          link-arg: -lblas
-        env:
-          LIBRARY_PATH: /usr/lib/x86_64-linux-gnu:/usr/lib/aarch64-linux-gnu:/usr/lib/arm-linux-gnueabihf:/usr/lib/s390x-linux-gnu:/usr/lib/ppc64le-linux-gnu
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
