--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,7 @@ jobs:
           sudo apt-get update
           sudo apt install build-essential
           sudo apt-get install libblas-dev liblapack-dev
+          sudo apt-get install libopenblas-dev
           export CARGO_BLAS=openblas
       - uses: actions/setup-python@v4
         with:
