--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,7 @@ jobs:
           sudo apt install build-essential
           sudo apt-get install libblas-dev liblapack-dev
           sudo apt-get install libopenblas-dev
+          export LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:/usr/lib/aarch64-linux-gnu:/usr/lib/arm-linux-gnueabihf:/usr/lib/s390x-linux-gnu:/usr/lib/ppc64le-linux-gnu
           export CARGO_BLAS=openblas
       - uses: actions/setup-python@v4
         with:
