--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,10 +27,8 @@ jobs:
       - name: Install OpenBLAS
         run: |
           sudo apt-get update
-          sudo apt install build-essential
-          sudo apt-get install libblas-dev liblapack-dev
-          sudo apt-get install libopenblas-dev
-          export LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:/usr/lib/aarch64-linux-gnu:/usr/lib/arm-linux-gnueabihf:/usr/lib/s390x-linux-gnu:/usr/lib/ppc64le-linux-gnu:/usr/lib/openblas-base
+          sudo apt-get install -y libopenblas-dev
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib/openblas-base
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
