--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,7 @@ jobs:
           sudo apt-get install liblapack-dev -y ; sudo apt-get install liblapack3 -y ; sudo apt-get install libopenblas-base -y ; sudo apt-get install libopenblas-dev -y
           sudo find / -name libblas.so*
           export LD_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu
+          export CARGO_BLAS=openblas
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
