--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ crate-type = ["cdylib"]
 [dependencies]
 anyhow = "1.0.79"
 hashbrown = "0.14.3"
+ndarray = "0.15.6"
+ndarray-rand = "0.14.0"
 nohash-hasher = "0.2.0"
 pyo3 = "0.18.1"
 rand = "0.8.5"
 rayon = "1.8.1"
-rblas = "0.0.13"
