--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,9 +28,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install liblapack-dev -y ; sudo apt-get install liblapack3 -y ; sudo apt-get install libopenblas-base -y ; sudo apt-get install libopenblas-dev -y
-          sudo find / -name libblas.so*
-          export LD_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu
-          export CARGO_BLAS=openblas
+          export CARGO_BLAS=cblas
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
