--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,12 +31,12 @@ jobs:
           sudo apt-get install liblapack-dev -y ; sudo apt-get install liblapack3 -y ; sudo apt-get install libopenblas-base -y ; sudo apt-get install libopenblas-dev -y
       - name: Verify BLAS installation
         run: apt list --installed | grep libblas
-      - name: Set RUSTFLAGS
-        run: export RUSTFLAGS='-L /usr/lib/x86_64-linux-gnu/blas'
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
       - name: Build wheels
+        env:
+          RUSTFLAGS: "-L /usr/lib/x86_64-linux-gnu/blas"
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
