--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,7 +36,7 @@ jobs:
           python-version: '3.10'
       - name: Build wheels
         env:
-          RUSTFLAGS: "-L /usr/lib/x86_64-linux-gnu/blas"
+          RUSTFLAGS: "-L /usr/lib/x86_64-linux-gnu/ -lopenblas"
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
