--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Install BLAS
+        run: sudo apt-get install libblas-dev liblapack-dev
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
